# Stm32f401

./: .clang-format  .cproject  .gitignore  .project  Example_BlackPill Debug.launch  Example_BlackPill.ioc  README.md  configure_all_modules.bat
Debug/: Example_BlackPill.elf  Example_BlackPill.list  Example_BlackPill.map  makefile
Pr_Settings/: ut_modules_config.txt
Pr_Settings/Cmake/: CMakeLists.txt  Toolchain-arm-gcc.cmake  compiler_flags.cmake
Pr_Settings/UT/: ut_modules_config.txt
Sw_Components/01_App/HwCfg/: clock_cfg.h  port_cfg.c  port_cfg.h  pwm_cfg.c  pwm_cfg.h  spi_cfg.c
Sw_Components/01_App/MotorCtrl/: motor_ctrl.c  motor_ctrl.h
Sw_Components/01_App/MotorCtrl/motor_ctrl_UT/: CMakeLists.txt  CMakePresets.json  gcc.yml  header_files.bat  mock_headers.txt  motor_ctrl_UT.c
Sw_Components/01_App/MotorCtrl/motor_ctrl_UT/mocks/: pwm.c  pwm.h  queue.c  queue.h  rtos_types.h  spi.c  spi.h  spi_types_mock.h  task.c  task.h
Sw_Components/02_Srv/: main.c
Sw_Components/02_Srv/Os/FreeRTOS/Config/: FreeRTOSConfig.h
Sw_Components/02_Srv/Os/FreeRTOS_UT/: rtos_types_UT.h
Sw_Components/02_Srv/Os/Os_Api/: os.c  os.h  type_reuse.h
Sw_Components/04_Drv/clock/: clock.c  clock.h  clock_cfg.c  clock_cfg.h
Sw_Components/04_Drv/irq/: isr_vectors.c  systick.c  systick.h
Sw_Components/04_Drv/ports/: port.c  port.h  port_cfg.c  port_cfg.h  port_types.h
Sw_Components/04_Drv/pwm/: pwm.c  pwm.h  pwm_cfg.c  pwm_cfg.h  pwm_types.h
Sw_Components/04_Drv/pwm/pwm_UT/: CMakeLists.txt  pwm_UT.c
Sw_Components/04_Drv/pwm/pwm_UT/mocks/: Mockpwm.c  Mockpwm.h
Sw_Components/04_Drv/spi/: spi.c  spi.h  spi_cfg.c  spi_cfg.h
Sw_Components/04_Drv/spi/spi_UT/: CMakeLists.txt  spi_UT.c  spi_helper_UT.c  spi_helper_UT.h
Sw_Components/05_Mcu/core_init/: system_stm32f4xx.c
Sw_Components/05_Mcu/stm32/: stm32f4xx.h
Tools/Cmake/: CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Makefile  cmake_install.cmake  compiler_flags.cmake  stm32f401.dmp  stm32f401.elf  stm32f401.hex  stm32f401.lss  stm32f401.map
Tools/Scripts/: ut_build_and_run.bat  ut_clean_all_modules.bat  ut_configure_all_modules.bat  ut_generate_all_mocks.bat  ut_generate_mocks.bat
Tools/Templates/: c_file_template.c  h_file_template.h
Tools/Unit_Testing/Cmock/config_files/: example_gcc.yml
Tools/Unit_Testing/Cmock/lib/: cmock_config.rb
